# CppLinuxSerial

./: .cproject  .gitignore  .project  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  README.rst
.github/workflows/: cmake.yml
api/: SerialPortApi.hpp
docs/: conf.py  index.rst
examples/: FlowControl.cpp
include/: Config.hpp  SerialPort.hpp
include/CppLinuxSerial/: Exception.hpp  SerialPort.hpp
include/SerialPort/: SerialPort.hpp
src/: CMakeLists.txt  Config.cmake.in  SerialPort.cpp
test/arduino/: main.cpp  run.sh
test/arduino/Basic/: Basic.ino
test/unit/: BasicTests.cpp  CMakeLists.txt  ConfigTests.cpp  TestUtil.hpp  main.cpp
tools/: build.sh
tools/lib/: shflags  utilities.sh
